--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
                 <div id="calendly-embed" style="min-width:320px;height:700px;">
                     <!-- Replace YOUR_CALENDLY_USERNAME with your actual Calendly username -->
                     <div class="calendly-inline-widget" 
-                         data-url="https://calendly.com/nuritheedoll/hair-consultation" 
+                         data-url="https://calendly.com/nuritheedoll" 
                          style="min-width:320px;height:700px;"></div>
                     <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
                 </div>
