--- a/index.html
+++ b/index.html
@@ -378,11 +378,12 @@
                 <!-- Option 1: Embed Calendly Widget -->
                 <div id="calendly-embed" style="min-width:320px;height:700px;">
                     <!-- Replace YOUR_CALENDLY_USERNAME with your actual Calendly username -->
-                    <div class="calendly-inline-widget" 
-                         data-url="https://calendly.com/nuritheedoll" 
-                         style="min-width:320px;height:700px;"></div>
-                    <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
-                </div>
+                   <!-- Calendly Embed -->
+<div class="calendly-inline-widget" 
+     data-url="https://calendly.com/nuritheedoll/new-meeting" 
+     style="min-width:320px;height:700px;"></div>
+<script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
+
                 
                 <!-- Option 2: Calendly Popup Button (Alternative) -->
                 <!-- Uncomment this if you prefer a popup instead of embed -->
