--- a/index.html
+++ b/index.html
@@ -275,6 +275,7 @@
         <div class="page active" id="page1">
             <h1>✨ Hair Consultation</h1>
             <div class="welcome-content">
+                <img src="welcome.jpg" alt="Welcome" style="max-width: 180px; margin-bottom: 25px; border-radius: 50%;">
                 <p>Welcome! I'm excited to help you achieve your dream hair goals.</p>
                 <p>This personalized 10-minute consultation will help me understand your hair type, concerns, and styling preferences so I can provide tailored recommendations just for you.</p>
             </div>
